# cddl_web_tools

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Rocket.toml  build.rs  build.sh
.github/workflows/: ci.yml
src/: codegen.rs  main.rs  validation.rs
static/: error.css  form.js  generation.html  index.html
templates/: base.html.tera  error.html.tera  index.html.tera  response.html.tera
tests/: cddl.json
