[package]
name = "cddl_web_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
cddl = "0.9.1"
cddl-cat = "0.6.1"
cuddle = { git = "https://github.com/hansl/cuddle/" }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]

[build-dependencies]
minify-html = "0.11.0"
minify-js = "0.5.6"